test/sema/fn_type_error.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:11: error: failed to resolve type 'Err'
  let f: (Err) -> unit;
}
